# hello-arch-logging

./: README.md  pyproject.toml
arch_logging/: __init__.py
arch_logging.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
